# test-generator-SI

./: ARCHITECTURE.md  ASSETS_v1.md  CHANGELOG.md  DATA_MODEL.md  README.md  ROADMAP.md  RULES_v1.md  SPEC_v1.md  TEST_PLAN.md  generate_exam.py  pyproject.toml
creador_tests.egg-info/: entry_points.txt
outputs/: C1.json  C2.json  C3.json  C4.json  C5.json  C6.json  C7.json  C8.json
rules/: rules-1.0.yaml
schemas/: exam_doc-1.0.schema.json
src/creador_tests/: __init__.py  cli.py
src/creador_tests.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/creador_tests/assets/: __init__.py  policy.py  render.py
src/creador_tests/core/: __init__.py  issues.py  normalize.py  types.py
src/creador_tests/parse/: __init__.py  extract.py  extract_cloze_labeled_blanks.py  extract_cloze_table.py  extract_external_media_reference.py  extract_matching.py  extract_multi_select.py  extract_multipart_short_answer.py  extract_numeric.py  extract_short_answer_text.py  extract_single_choice.py  extract_unknown.py  flags.py  grading.py  typify.py
src/creador_tests/pdf/: __init__.py  extract.py  segment.py
src/creador_tests/renderers/: __init__.py  ubuvirtual.py
src/creador_tests/validate/: __init__.py  schema_validate.py
templates/ubuvirtual_review/: base.jinja.html  base_raw.html  base_sanitized.html
templates/ubuvirtual_review/assets/: requirejs.php  styles.php
tests/: __init__.py  test_flags_assets.py  test_golden.py  test_golden_complete.py  test_render_html.py  test_schema_validation.py
